added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "azimahltd",
+  "homepage": "http://www.azimahltd.com.ng/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
